@@ -95,7 +95,7 @@ gdoc_MANS += man/gsasl_property_fast.3
 gdoc_MANS += man/gsasl_property_get.3
 gdoc_MANS += man/gsasl_register.3
 gdoc_MANS += man/gsasl_saslprep.3
-gdoc_MANS += man/gsasl_is_mechanism_name_valid.3
+gdoc_MANS += man/gsasl_mechanism_name_p.3
 gdoc_MANS += man/gsasl_client_suggest_mechanism.3
 gdoc_MANS += man/gsasl_client_support_p.3
 gdoc_MANS += man/gsasl_server_support_p.3
@@ -162,7 +162,7 @@ gdoc_TEXINFOS += texi/gsasl_property_fast.texi
 gdoc_TEXINFOS += texi/gsasl_property_get.texi
 gdoc_TEXINFOS += texi/gsasl_register.texi
 gdoc_TEXINFOS += texi/gsasl_saslprep.texi
-gdoc_TEXINFOS += texi/gsasl_is_mechanism_name_valid.texi
+gdoc_TEXINFOS += texi/gsasl_mechanism_name_p.texi
 gdoc_TEXINFOS += texi/gsasl_client_suggest_mechanism.texi
 gdoc_TEXINFOS += texi/gsasl_client_support_p.texi
 gdoc_TEXINFOS += texi/gsasl_server_support_p.texi
